Bug 284662 - Continuous "Advanced probing on /dev/sr0 failed while reading block size" error for CDDAs
Summary: Continuous "Advanced probing on /dev/sr0 failed while reading block size" err...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udisks (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-22 02:15 UTC by Marcel Partap
Modified: 2011-11-20 13:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcel Partap 2011-10-22 02:15:41 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Hi,
at the top of the advancedDiscDetect() function it says original code was http://cgit.freedesktop.org/hal/tree/hald/linux/probing/probe-volume.c ... that file however skips the check for advanced content:
> 		/* Suggested by Alex Larsson to get rid of log spewage
> 		 * on Alan's cd changer (RH bug 130649) */
> 		if (ioctl (fd, CDROM_DRIVE_STATUS, CDSL_CURRENT) != CDS_DISC_OK) {
> 			goto out;
> 		}
> 
> 		/* check for audio/data/blank */
> 		type = ioctl (fd, CDROM_DISC_STATUS, CDSL_CURRENT);
> 		switch (type) {
> 		case CDS_AUDIO:		/* audio CD */
> 			libhal_changeset_set_property_bool (cs, "volume.disc.has_audio", TRUE);
> 			HAL_DEBUG(("Disc in %s has audio", device_file));
> 			should_probe_for_fs = FALSE;
> 			break;
> 		case CDS_MIXED:		/* mixed mode CD */
> 			libhal_changeset_set_property_bool (cs, "volume.disc.has_audio", TRUE);
> 			libhal_changeset_set_property_bool (cs, "volume.disc.has_data", TRUE);
> 			HAL_DEBUG(("Disc in %s has audio+data", device_file));
> 			break;
> 		case CDS_DATA_1:	/* data CD */
> 		case CDS_DATA_2:
> 		case CDS_XA_2_1:
> 		case CDS_XA_2_2:
> 			libhal_changeset_set_property_bool (cs, "volume.disc.has_data", TRUE);
> 			HAL_DEBUG(("Disc in %s has data", device_file));
> 			advanced_disc_detect (cs, fd, device_file);
> 			break;
as the current solid udisk backend does not do this, it spews error to stdout AS LONG AS AN AUDIO CD IS INSERTED for ANY KDE app that uses the places bar - even if only in open/save dialogs.

Reproducible: Didn't try

Steps to Reproduce:
start dolphin, konqueror, amarok, file open/save dialog in any other kde app 

Actual Results:  
Advanced probing on /dev/sr0 failed while reading block size
and again
and again
and again
and again
repeat

Expected Results:  
advancedDiscDetect() should not be invoked on Audio-only discs *at all*

OS: Linux (x86_64) release 3.1.0-rc9-00064-g65112dc-dirty
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Neofytos Kolokotronis 2011-11-19 02:23:17 UTC
Hello,

I keep getting exactly the same error as above (Advanced probing on /dev/sr0 failed while reading block size) in Dolphin, when I instert an AudioCD.

 I get the same error by Amarok, which can't play music from the CD, nor find any files on it.

This is the only bug I could find with that error, if it's not the same, please let me know if I should open a new one.

This is on a Chakra, KDE SC 4.7.3, linux 3.1.0, x86_64 system.
Comment 2 Martin Stolpe 2011-11-19 17:35:03 UTC
Hello,

same here on Archlinux.
Comment 3 Lukáš Tinkl 2011-11-20 13:50:43 UTC
Git commit cca2f377cbe54aa2920afcd7aa3904d4383b4e06 by Lukas Tinkl.
Committed on 20/11/2011 at 14:50.
Pushed by lukas into branch 'KDE/4.7'.

don't do the advanced probe for audio CDs

BUG: 284662

M  +4    -4    solid/solid/backends/udisks/udisksopticaldisc.cpp

http://commits.kde.org/kdelibs/cca2f377cbe54aa2920afcd7aa3904d4383b4e06