don't do the advanced probe for audio CDs

BUG: 284662